--- a/main.html
+++ b/main.html
@@ -8,7 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<a href=https://en.wikipedia.org/wiki/Golden_Retriever><img src=https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg></a>
+	<br>
+	<a href=https://en.wikipedia.org/wiki/Poodle><img src=https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg></a>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
